# llm

./: .env  .webui_secret_key  Makefile  docker-compose.yml
jellyfin/: docker-compose.yml
onyx_data/: README.md
onyx_data/deployment/: .env  .env.bak  Makefile  docker-compose.gpu.yml  docker-compose.yml
onyx_data/transcription/: app.py
pdf_ocr/: .gitignore  Makefile  diagnostic.py  pipeline.py  pyproject.toml  skew_probe.py
plans/: mineru-onyx-integration.md
searxng/: settings.yml
transcription/: Dockerfile  Makefile  README.md  app.py  requirements.txt
transcription/backend/: main.py  models.py  pyproject.toml  transcriber.py
transcription/frontend/: index.html  package.json  vite.config.ts
transcription/frontend/src/: App.module.css  App.tsx
transcription/frontend/src/components/: FileList.tsx  FileUpload.tsx  Header.tsx  Transcription.tsx
transcription/frontend/src/lib/: api.ts  types.ts
transcription/frontend/src/styles/: global.css
