[project]
name = "whisper-transcription"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "aiofiles",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "RUF006",  # asyncio.create_task without storing reference (fire-and-forget is intentional)
    "SIM105",  # contextlib.suppress — less readable in async cleanup patterns
]

[tool.ruff.lint.isort]
known-first-party = ["models", "transcriber"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "torch.*",
    "aiofiles.*",
]
ignore_missing_imports = true
